# pingquery

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
client/: compile_protos.sh  package-lock.json  package.json  tsconfig.json
client/src/: index.js  index.ts  wrapper.test.ts  wrapper.ts
client/src/proto/: api.ts  api_grpc_pb.d.ts  api_grpc_pb.js  api_pb.d.ts  api_pb.js
examples/01-chatroom/: chatroom.ts  setup.ts
examples/02-website/: .firebaserc
examples/02-website/public/: index.html
proto/: api.proto
server/: Cargo.toml  Dockerfile  build.rs  fly.toml
server/proto/: api.proto
server/src/: actor.rs  config.rs  diagnostics.rs  lib.rs  listen.rs  main.rs  persistence.rs  requests.rs  server.rs  value.rs
server/src/proto/: pingquery.api.rs
src/: main.rs
src/proto/: pingquery.api.rs
