[package]
name = "pingquery"
version = "0.1.0"
authors = ["Ryan P. Brewster <RyanPBrewster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "4.0"
env_logger = "0.8"
log = "0.4"
prost = "0.8"
r2d2 = "0.8"
r2d2_sqlite = "0.18"
rusqlite = { version = "0.25", features = ["bundled"] }
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tonic = "0.5"
tonic-reflection = "0.2"

[build-dependencies]
tonic-build = "0.5"
