[package]
name = "pingquery"
version = "0.1.0"
authors = ["Ryan P. Brewster <RyanPBrewster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
actix= "0.10"
actix-web = "3"
actix-web-actors = "3"
dashmap = "4"
env_logger = "0.8"
log = "0.4"
prost = "0.8"
r2d2 = "0.8"
r2d2_sqlite = "0.18"
rusqlite = { version = "0.25", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[build-dependencies]
prost-build = "0.8"

[[bin]]
name = "noop"
path = "./src/bin/noop.rs"

[[bin]]
name = "app"
path = "./src/bin/main.rs"